# harboor-sweep

./: .eslintrc.js  README.md  package.json  pnpm-lock.yaml  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
.github/workflows/: publis.yml
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  state.rs
src-tauri/src/common/: mod.rs
src-tauri/src/unix/: linux.rs  mod.rs
src-tauri/src/windows/: mod.rs  windows.rs
src/components/: PortProcessesItem.vue  PortProcessesTable.vue  PortProcessesTableHeader.vue
src/components/base/: BaseButton.vue  BaseLabeledBox.vue  BaseTextField.vue  BaseVirtualList.vue
src/components/dialog/: ConfirmKillingDialog.vue
src/components/layout/: TheApplicationWindow.vue
src/components/loaders/: CircleSpinner.vue
src/components/notifications/: ToastNotificationItem.vue  ToastNotificationManager.vue
src/components/port-processes/: PortProcessListHeader.vue  PortProcessesItem.vue  PortProcessesList.vue
src/components/v2/: TheApplicationProcessFooter.vue  TheApplicationProcessSearchComponent.vue  TheApplicationWindow.vue  V2PortProccessesList.vue  V2PortProcessListHeader.vue  (+1 more)
src/composables/: useKillProcess.ts
src/router/: index.ts
src/store/: application.store.ts  dialogs.store.ts  notifications.store.ts  port-processes.store.ts
src/styles/: main.scss
src/types/: index.ts  virtual-list.types.ts
src/utils/: theme-helper.ts
src/views/: HomeView.vue
(+12 files in other folders)
